Uppercase -> lower case

--- a/data/blog/tenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/tenth-wave-of-bitcoin-grants.mdx
@@ -54,8 +54,8 @@ and mempool.space.
 
 One of Bitcoin Safe's standout features is "Sync & Chat", a nostr-based
 messaging system that leverages relays to route encrypted messages and
-metadata between users and devices.  Whenever a Bitcoin Safe Wallet sends a
-[PBST](https://bitcoinops.org/en/topics/psbt/) to another Bitcoin Safe Wallet,
+metadata between users and devices. Whenever a Bitcoin Safe wallet sends a
+[PBST](https://bitcoinops.org/en/topics/psbt/) to another Bitcoin Safe wallet,
 the transaction labels are synced between devices, and when multi-sig users
 message each other concerning the status of their transaction, all of this
 encrypted communication is securely relayed over nostr.
