Edit: was >> has been
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/let-a-thousand-flowers-bloom.mdx
+++ b/data/blog/let-a-thousand-flowers-bloom.mdx
@@ -8,7 +8,7 @@ images: ['/static/images/blog/72-let-a-thousand-flowers-bloom.jpg']
 summary: "OpenSats fosters a global network of nonprofits supporting open-source Bitcoin and nostr development."
 ---
 
-From the beginning, the [OpenSats mission](/mission) was to provide a
+From the beginning, the [OpenSats mission](/mission) has been to provide a
 sustainable ecosystem of funding for developing free and open-source software,
 especially software that makes bitcoin flourish.
 
