Edit url destination
Co-authored-by: Amiti Uttarwar <amiti@uttarwar.org>

--- a/data/blog/tenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/tenth-wave-of-bitcoin-grants.mdx
@@ -107,7 +107,7 @@ launched pilot programs to address these issues. These
 coaching, and the development of scalable, openly shared frameworks.
 
 At the heart of their mission is [OS
-Reboot](https://www.waye.dev/initiatives/os-reboot), Waye's cornerstone program,
+Reboot](https://www.waye.dev/initiatives/os-reboot#bitcoin), Waye's cornerstone program,
 with monthly expert-led discussions, structured group work, and reflection
 periods to provide sustained, practical support for open-source developers. The
 outcomes of Waye initiatives will be open-sourced, providing the broader
