Small phasing edit
Co-authored-by: Amiti Uttarwar <amiti@uttarwar.org>

--- a/data/blog/tenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/tenth-wave-of-bitcoin-grants.mdx
@@ -114,8 +114,7 @@ outcomes of Waye initiatives will be open-sourced, providing the broader
 community with methodologies and frameworks to better support FOSS contributors.
 By fostering a more resilient and diverse developer community, Waye aims to
 strengthen the human infrastructure essential for advancing decentralized
-technologies. If you are an open-source developer looking for support, [reach
-out to Waye](mailto:waye.dev@gmail.com).
+technologies. If you are an open-source developer looking for support, sign up for a program or [reach out to Waye directly](mailto:waye.dev@gmail.com).
 
 Repository: [waye-dev/waye](https://github.com/waye-dev/waye)  
 Licenses: MIT & CC BY-SA 4.0
