Add PGP Public Key + Fingerprint

--- a/data/authors/arvin.mdx
+++ b/data/authors/arvin.mdx
@@ -15,3 +15,63 @@ his passion for empowering innovation. Inspired by Bitcoin and Nostr as
 transformative equalizers that unlock boundless human potential, he now devotes
 his time to supporting a future where these technologies will foster a more
 honest, fair, and interconnected society.
+
+---
+
+### PGP Key
+
+Fingerprint: `6CC8 9FD1 A1B7 85D9 E582 5DA6 D1EB D868 BAA0 77C1`
+
+```
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+
+xsFNBGfTcWkBEACtOR0gYnLghvcOwcWzAXrUJMutuI+EGelX+o6YRa7Nn0XdfpKh
+Sr1dtIAjFcxCVcJg17p/Y0dRUIv7BvkOJoJfgscsEjBxE/KVKKzllRoEBhhaA+fW
+e1grRtmFnO1rEH+9k0iawuzD1pLgiK+R5SSactmbPXK5sQSePKSZWvEr//HQi+1i
+m50FWNonomHE3W9PE3c+LG8jDsIlIN1f0pE/2bI0h/FZlvMlVev/BmFVE0UxOQHc
+wjjPw8hjLANqnUMZesqljcuV3cDtlHybNlA03VGYJHcfV3w0kmp6locsZwZiswWr
+1o0YmiLbT1BsrsdAXH24wca1qt9pX96IXxn5O8tILQ0wZNazIOK4K6ZXH450lZm1
+POVEM+1NEmGcDKfNZAR5IBMfTVG4PWBD8ZtnhJOiu3u6+k3v93dBrbmXqzDhqRC6
+Y5ThaHpeHqnjbCf/hvNWZR1bsuGneh8oBM/HYwjeU6EiLvXxXX/jEoYLDrxnklg4
+qE4bxLQwwBWFWh19tn1RZyP2CoHKSfCDZD4B01J+aLPAbAW/4bo1MetinTT09PJR
+7J5R+/YgKsGevMuV0nCJaowLzD9gGeaVqQAWQO6MmFM/jUq7cwea9ZCGRfoYqlat
+S1JD1/QY/Oks/EhfC5f8e6sXkBVzEJL2m4aTEGI42TnGfnp1nB2h4hlatQARAQAB
+zRpBcnZpbiA8YXJ2aW5Ab3BlbnNhdHMub3JnPsLBjQQTAQgANxYhBGzIn9Ght4XZ
+5YJdptHr2Gi6oHfBBQJn03FqBQkFo5qAAhsDBAsJCAcFFQgJCgsFFgIDAQAACgkQ
+0evYaLqgd8FvlQ/+O6SPCRS/Dx4LtgHzcFoX2mBV3H/rQI4K2jiTacBmpzBaMzkU
+NN6sjUUP2WoxAylWOwbdKnBz0p7PD/aRku49RKPfNC6VSWl+aotLbMk8juy35SPI
+hhfOvkDFlRaNzuJ3N59odjK+6Be/8kHpBFiC3hxSLlJVkzJJhCMJXzaAFiQK+xdn
+YeYJAKxT54hfeHGuqBeZwPAQ5maipqrr1u0+WlreLksvXYqcUixHCkhDuC9AxnmS
+3KFwRMJ8WpbEh/5A/AVVRebg3Qtw9aR8xTPzyeI1+IaoGVRnTtvMPJb7GRAOYn4W
+XCQwLMUqr6UWc8SpbCNV0QhJuTFLyKolCk8Sx95ZawxIciE0OkQrcDZVq/fUkAmu
+6QRN2mp68NcU24feNDeJ100fEVaZJ0Kqe9Zw3yEqPK2wuULSDGm5Zt6i49jmhzvH
+/75kA+f/krZvOYiObEb2YCb6DtL8Yt0WftTUJyPvy6MHvD84NOmx5Gj8G2vet42Y
+5wW4SxK1X2E8xnP9fg8dDI0yx4hWRvs/BFka9y3Fr2YAzK8BdBK6a055KmhxLZYA
+ydmJzrv9EFcmHC0CBa7+is7T/udi5xzwDI6HgqVXqTLI2tGX/MBa9Xmbf9vph7Zp
+LEK4AEZIUL/TQaORyBhCzR4A56OFv5jrA0CxnY+aN9bR3NJBBjeU5F82JhTOwU0E
+Z9NxawEQAL5/6Clw2W8rHhXOIrhilzAZFnz7rtrSJGzsO0GKxtXTwAQpAEtVUyXq
+FNWAAodivtk/IUbRt4RFUn0idddy7SFLJ11qonyJt8mP9ezQe+iIE6FSidxGMwuY
+h8F7MGGcjkFUE6jsMj2gWTEdLPSlppJfgpOGwlKVavIv7Chnd/g9Te/rsY7vN4tJ
+CKBXK74qAfGK0dr0SxKQWgdPzZ8F3L7FdKDn0fjJ8ZwpL+2ZIx3htX4pUrMlTNc0
+RPeFqv9X+Tu6tfp5ySRl0X+5je9mmXxPWUvKzRLfC3eIU4RvsXjXt5okgY1IDjWb
+T6fHDs3jcYG78K3XLhjEM9kjkGc+enCujm+JI2P3sYUB6udGHt3mPzzXHF9EAb03
+RSkSFK9yrn/LcV9sPBGwAOIJb6roQJZoS+kkGVKvu1DBpN+EWtfpfK3Izla7qttz
+uDssr0PntzkKN4ynV+5iTlAxVUEECOiGsFfajIlTyV7DFdmWh8qTtrw2SgKOHMe8
+CZbdMngJh5LtbGt8SVGVNKntkZYCyLwDrmY8qJ2Kv/4JBCt+yYlr3005OJaYizkX
+o1O8jBlMBUwbSZC2X6eJ0bAtaa7LwkJ2ACpYk9a0cXt3wqNeWh5BH9xMRFDRW5lv
+4WH09paNEs7KowK0yt+CZm3EmPePBUWhtu2i0mtfaCtL/mcMWBaZABEBAAHCwXwE
+GAEIACYWIQRsyJ/RobeF2eWCXabR69houqB3wQUCZ9NxbQUJBaOagAIbDAAKCRDR
+69houqB3warED/4ucEgPK12htXotSYuMj9KVUCyApSzGyIIDkvIMuc1oT/xC9qto
+Esvcdg7i6FxBDnt5NCf2RQ59hBvY9pkHJJAMDR3Wk2IjAi4EZjTIgZCcKTFYpY4r
+mA+TTEG5bac18rjs4qYJCtwIT/r9JWtfumoe0BaNLx8J4T/ZI6fQflj9Vxq0+wQR
+Ew7Dg2tLPVSGEEfpDGH2AJKU0kUSeZIirjFeJJXliw9yi3abscYeshQ6FsORKtI1
+eagk7+ijXkp7TdfYioaK4JW+78stjNx6Gn9ho/qtT3lgzogAqKL4GBoxsYlJavKn
+umDf7LxN0+AMI5olmoQSd0P8sV6m75/gP27ZxuMM7mM1ydVERrtKU92lNBilfYtv
+rS7qfBGZAWTxN9KCH4UWzi4DMqCI0jenZxpINjYqGQdobVAiuBnwoq94TBMdVJu6
+11L7lqnCdK+Seco9pz8T2dPVLI1JAXbBzhBGvG3+zBdHgzfz8zSNRASM/VlRbFo/
+VomZTI2o9w516UHHUZFa8DQbn+oN1dLy7caLHC4uG86xEq4e8i2mRmxkO4IbIqVA
+ovkYL2/HGW2oNgtv1IzmxsN3wKZ248pBWLvU5LGDM+ByNu4QGOvFsMq9TCx771NG
+On3pZ4zJ4CkXXdN52j2C40DS+kKEPvw4tpHD6SJepLvzCak0KoYL8hHS0w==
+=9ST8
+-----END PGP PUBLIC KEY BLOCK-----
+```
