--- a/data/blog/let-a-thousand-flowers-bloom.mdx
+++ b/data/blog/let-a-thousand-flowers-bloom.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Let a Thousand Flowers Bloom"
-date: '2025-03-13'
+date: '2025-03-15'
 tags: ['OpenSats', 'grants', 'bitcoin', 'nostr', 'wave']
 draft: false
-authors: ['dergigi']
+authors: ['default', 'dergigi']
 images: ['/static/images/blog/72-let-a-thousand-flowers-bloom.jpg']
 summary: "OpenSats fosters a global network of nonprofits supporting open-source Bitcoin and nostr development."
 ---
