--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -81,11 +81,13 @@ the liberty to provide accounting or legal advice across so many different
 jurisdictions. We recommend asking a local accountant or lawyer in your
 jurisdiction.
 
-### Can OpenSats help me set up a dedicated nonprofit foundation for my project?
+### Can OpenSats help me to set up an organization or foundation for my open-source project?
 
-OpenSats does not provide this service, but our grantee, the [Foundation
-Formation Kit](https://docs.foundationformationkit.org/), offers guidance and
-documentation on setting up a non-profit for open-source projects.
+We can't offer help directly, but the [Foundation Formation
+Kit](http://docs.foundationformationkit.org/) (FFK) was specifically created for
+that purpose. If you need additional guidance when it comes to establishing a
+tax-exempt foundation for your open-source project, please reach out to
+[info@opensourcejustice.org](mailto:info@opensourcejustice.org)
 
 ### What are the requirements of my grant?
 
@@ -190,8 +192,9 @@ the Bitcoin and/or Nostr ecosystems.
 
 ### What should I do if I feel overwhelmed while working on my projects?
 
-If you're feeling overwhelmed, [reach out to us][c] and let
-us know. Alternatively, our grantee [Waye](https://www.waye.dev/about) offers
+If you're feeling overwhelmed, [reach out to us][c] and let us know.
+
+In addition, please know that [Waye](https://www.waye.dev/about) offers
 structured support to help developers manage stress and avoid burnout through
 programs with group discussions, coaching, and reflection tools. You can reach
 them at [waye.dev@gmail.com](mailto:waye.dev@gmail.com)
