--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -25,7 +25,7 @@ changes so that you can continue building under sustainable conditions.
 - [Can the grant be received as a company, trust, LLC, or similar?](#can-the-grant-be-received-as-a-company-trust-llc-or-similar)
 - [Why do you require tax information from your grantees?](#why-do-you-require-tax-information-from-your-grantees)
 - [Can OpenSats help me with an accounting or legal question?](#can-opensats-help-me-with-an-accounting-or-legal-question)
-- [Can OpenSats help me set up a dedicated nonprofit foundation for my project?](#can-opensats-help-me-set-up-a-dedicated-nonprofit-foundation-for-my-project)
+- [Can OpenSats help me to set up an organization or foundation for my open-source project?](#can-opensats-help-me-to-set-up-an-organization-or-foundation-for-my-open-source-project)
 - [What are the requirements of my grant?](#what-are-the-requirements-of-my-grant)
 - [What does it mean to produce work under a free and open-source license?](#what-does-it-mean-to-produce-work-under-a-free-and-open-source-license)
 - [How does OpenSats evaluate the work done by a grantee?](#how-does-opensats-evaluate-the-work-done-by-a-grantee)
