Update Grantee FAQ with links to Waye & FFK (#423)
* Add two new items to website faq/grantee

Q: What should I do if I feel overwhelmed while working on my projects?

If you're feeling overwhelmed, reach out to us at support@opensats.org and let us know. Alternatively, our grantee [Waye](https://www.waye.dev/about) offers structured support to help developers manage stress and avoid burnout through programs with group discussions, coaching, and reflection tools. You can reach them at [waye.dev@gmail.com](mailto:waye.dev@gmail.com)

Q: Can you help set up a dedicated non-profit foundation for my project?

A: OpenSats does not provide this service, but our grantee, the [Foundation Formation Kit](https://docs.foundationformationkit.org/), offers guidance and documentation on setting up a non-profit for open-source projects.

* Copy edits

* Update ToC

---------

Co-authored-by: Gigi <dergigi@pm.me>

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -25,6 +25,7 @@ changes so that you can continue building under sustainable conditions.
 - [Can the grant be received as a company, trust, LLC, or similar?](#can-the-grant-be-received-as-a-company-trust-llc-or-similar)
 - [Why do you require tax information from your grantees?](#why-do-you-require-tax-information-from-your-grantees)
 - [Can OpenSats help me with an accounting or legal question?](#can-opensats-help-me-with-an-accounting-or-legal-question)
+- [Can OpenSats help me to set up an organization or foundation for my open-source project?](#can-opensats-help-me-to-set-up-an-organization-or-foundation-for-my-open-source-project)
 - [What are the requirements of my grant?](#what-are-the-requirements-of-my-grant)
 - [What does it mean to produce work under a free and open-source license?](#what-does-it-mean-to-produce-work-under-a-free-and-open-source-license)
 - [How does OpenSats evaluate the work done by a grantee?](#how-does-opensats-evaluate-the-work-done-by-a-grantee)
@@ -34,6 +35,7 @@ changes so that you can continue building under sustainable conditions.
 - [What happens if the deliverables, milestones, or timelines proposed in the application are changed or not delivered?](#what-happens-if-the-deliverables-milestones-or-timelines-proposed-in-the-application-are-changed-or-not-delivered)
 - [Is it okay to work on something that isn’t part of the grant agreement or even pivot to another project?](#is-it-okay-to-work-on-something-that-isnt-part-of-the-grant-agreement-or-even-pivot-to-another-project)
 - [I wasn’t able to work on my project as much as I expected, what should I do?](#i-wasnt-able-to-work-on-my-project-as-much-as-i-expected-what-should-i-do)
+- [What should I do if I feel overwhelmed while working on my projects?](#what-should-i-do-if-i-feel-overwhelmed-while-working-on-my-projects)
 - [Can I pause my grant?](#can-i-pause-my-grant)
 - [Do I need to track hours?](#do-i-need-to-track-hours)
 - [How can I best ensure that OpenSats is getting a good return on investment?](#how-can-i-best-ensure-that-opensats-is-getting-a-good-return-on-investment)
@@ -78,6 +80,14 @@ We have hundreds of grantees across the globe and do not have the capacity or
 the liberty to provide accounting or legal advice across so many different
 jurisdictions. We recommend asking a local accountant or lawyer in your
 jurisdiction.
+
+### Can OpenSats help me to set up an organization or foundation for my open-source project?
+
+We can't offer help directly, but the [Foundation Formation
+Kit](http://docs.foundationformationkit.org/) (FFK) was specifically created for
+that purpose. If you need additional guidance when it comes to establishing a
+tax-exempt foundation for your open-source project, please reach out to
+[info@opensourcejustice.org](mailto:info@opensourcejustice.org)
 
 ### What are the requirements of my grant?
 
@@ -179,6 +189,15 @@ the Bitcoin and/or Nostr ecosystems.
 ### I wasn’t able to work on my project as much as I expected, what should I do?
 
 [Reach out to us][c] to discuss the best path forward as soon as possible.
+
+### What should I do if I feel overwhelmed while working on my projects?
+
+If you're feeling overwhelmed, [reach out to us][c] and let us know.
+
+In addition, please know that [Waye](https://www.waye.dev/about) offers
+structured support to help developers manage stress and avoid burnout through
+programs with group discussions, coaching, and reflection tools. You can reach
+them at [waye.dev@gmail.com](mailto:waye.dev@gmail.com)
 
 ### Can I pause my grant?
 
