Slight editing for better "flow"

--- a/data/blog/10th-wave-of-nostr-grants.mdx
+++ b/data/blog/10th-wave-of-nostr-grants.mdx
@@ -78,7 +78,7 @@ License: MIT
 
 ### Zapstore
 [Zapstore](https://zapstore.dev/) is a decentralized, permissionless app store
-built on the nostr protocol to give independent developers and users greater
+built on nostr to give developers and users greater
 control over their software experience. By allowing developers to
 cryptographically sign their releases and publish them via nostr events and
 relays, Zapstore ensures censorship-resistant distribution. Users can verify
@@ -90,17 +90,17 @@ and usable even offline or with poor connectivity. A command-line tool
 (zapstore-cli) enables developers to publish apps and act as a package manager
 across platforms like Mac and Linux.
 
-With the support of this grant, development efforts will focus on enhancing
-censorship resistance by enabling user-friendly app and relay management tools,
-supporting a wider variety of DVMs, and fostering a more diverse ecosystem of
-relays. On the social side, features like ratings, comments, and curated app
-packs will improve discovery and engagement. The project also plans to extend
-support to MacOS, Linux, and potentially PWAs, while continuing to develop UX
-improvements for developers, including self-signing workflows and bunker
-support. Further goals include integrating with package ecosystems like Homebrew
-via proxy relays and advancing the open app NIP spec to encourage third-party
-participation. Through these initiatives, Zapstore hopes to reduce developer
-dependence on big tech and foster a thriving, open-source app economy.
+With the support of this grant, efforts will focus on enhancing user-friendly
+app and relay management tools, supporting a wider variety of DVMs, and
+fostering a more diverse ecosystem of relays. On the social side, features like
+ratings, comments, and curated app packs will improve discovery and engagement.
+The project also plans to extend support to MacOS, Linux, and potentially PWAs,
+while continuing to develop UX improvements for developers, including
+self-signing workflows and bunker support. Further goals include integrating
+with package ecosystems like Homebrew via proxy relays and advancing the open
+app NIP spec to encourage third-party participation. Through these initiatives,
+Zapstore hopes to reduce developer dependence on big tech and foster a thriving,
+open-source app economy.
 
 Repository: [zapstore/zapstore](https://github.com/zapstore/zapstore)  
 License: MIT
