Update chachi repo URL
Co-authored-by: Bayer <55212954+Bayernatoor@users.noreply.github.com>

--- a/data/blog/10th-wave-of-nostr-grants.mdx
+++ b/data/blog/10th-wave-of-nostr-grants.mdx
@@ -73,7 +73,7 @@ onboarding, and bitcoin integration features such as sending
 Zaps in posts and chats. These advancements are set to further chachi's mission
 of providing decentralized, user-centric communication solutions.
 
-Repository: [verbiricha/chachi](https://git.v0l.io/verbiricha/chachi)  
+Repository: [purrgrammer/chachi](https://github.com/purrgrammer/chachi)  
 License: MIT
 
 ### Zapstore
