--- a/data/blog/10th-wave-of-nostr-grants.mdx
+++ b/data/blog/10th-wave-of-nostr-grants.mdx
@@ -87,7 +87,7 @@ layer—recommending apps, following trusted developers, and zapping
 value-for-value bitcoin payments directly. Zapstore supports Tor usage,
 account-less operation, and local-first architecture, making it fast, private,
 and usable even offline or with poor connectivity. A command-line tool
-(zapstore-cli) enables developers to publish apps and act as a package manager
+(`zapstore-cli`) enables developers to publish apps and act as a package manager
 across platforms like Mac and Linux.
 
 With the support of this grant, efforts will focus on enhancing user-friendly
