Update VLS integrations + add quote

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -163,15 +163,21 @@ dependable Lightning security.
 
 VLS has also expanded its footprint within the broader Lightning ecosystem
 through various integrations. Notably, the project revived
-[`lnrod`](https://gitlab.com/lightning-signer/lnrod), a reference implementation
+[lnrod](https://gitlab.com/lightning-signer/lnrod), a reference implementation
 that facilitates VLS compatibility with LDK-based nodes, broadening its
-usability for developers building on the Lightning Development Kit. Another
+usability for developers building on the Lightning Development Kit. VLS also
+powers secure transaction signing for [Breez](https://breez.technology/),
+[Relai](https://relai.app/), and several other Lightning businesses. Another
 major step forward was VLS's integration with
 [Greenlight](https://blockstream.com/lightning/greenlight/), a hosted Lightning
 node service run by Blockstream. By resolving key security issues in
 Greenlight's implementation, VLS has helped strengthen the security model of
 remote node hosting, an area of growing interest for enterprises and custodial
-service providers.
+service providers. As Christian Decker, Core Engineer at Blockstream put it:
+
+>"VLS allowed Greenlight to be developed at breakneck speed, without the risk.
+>It is the fundamental building block, and central to the non-custodial nature
+>of Greenlight."
 
 Looking ahead, VLS is preparing for its next phase of development, with a focus
 on continued enterprise optimization and expanded network compatibility. Work is
