--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -12,9 +12,9 @@ Unlocking Bitcoin's full potential as a global, peer-to-peer currency means
 building beyond the base layer. The Lightning Network is leading that
 charge—and thanks to dedicated open-source contributors, it's becoming faster,
 more secure, and easier to use every day. While the base layer ensures
-decentralization and security, its inherent trade-offs—like 10-minute block
-times and limited throughput—make it impractical for frequent, everyday
-payments. That's where Lightning comes in.
+decentralization and security, higher layers with different trade-off
+characteristics are required to enable high-velocity- and micro-transactions,
+streaming payments, and everyday commerce. That’s where Lightning comes in.
 
 As bitcoin++ organizer and Lightning Developer Lisa Neigut explains:
 
