Edit to remove double quotation marks

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -52,10 +52,10 @@ Dusty Daemon, a Splicing pioneer and an OpenSats [Long-Term Support
 recipient](blog/dusty-daemon-receives-lts-grant), highlights Splicing's impact
 on the Lightning Network:
 
->"For the typical user, this means a near doubling of the capacity to move
+>For the typical user, this means a near doubling of the capacity to move
 >liquidity through the network. The increased liquidity flows improve all
 >aspects of Lightning including payment speed, payment fees, and payment
->reliability."
+>reliability.
 
 Since receiving his grant, Dusty has advanced Splicing
 [interoperability](https://github.com/ElementsProject/lightning/pull/8031)
@@ -80,10 +80,10 @@ way for improved privacy in Bitcoin transactions, including
 [PayJoins](/blog/developing-advancements-in-onchain-privacy#async-payjoin). As
 Dusty explains:
 
->"The dream of higher-privacy decentralized on-chain coin sharing is brought
+>The dream of higher-privacy decentralized on-chain coin sharing is brought
 >ever so closer to reality with these improvements. These privacy projects have
 >always been separate from Lightning but Splicing enables them to be merged
->together, creating a larger base from which to derive anonymity."
+>together, creating a larger base from which to derive anonymity.
 
 As regulatory pressures mount, building resilient, decentralized infrastructure
 is more important than ever. These enhancements reinforce self-custody and
@@ -175,9 +175,9 @@ Greenlight's implementation, VLS has helped strengthen the security model of
 remote node hosting, an area of growing interest for enterprises and custodial
 service providers. As Christian Decker, Core Engineer at Blockstream put it:
 
->"VLS allowed Greenlight to be developed at breakneck speed, without the risk.
+>VLS allowed Greenlight to be developed at breakneck speed, without the risk.
 >It is the fundamental building block, and central to the non-custodial nature
->of Greenlight."
+>of Greenlight.
 
 Looking ahead, VLS is preparing for its next phase of development, with a focus
 on continued enterprise optimization and expanded network compatibility. Work is
@@ -232,11 +232,11 @@ conditions. Routing node operators can leverage these simulations to optimize
 liquidity allocation, fee structures, and channel management strategies. Project
 lead Blake Johnson emphasizes the importance of interoperability testing:
 
->"Interoperability between different Lightning Node implementations continues to
+>Interoperability between different Lightning Node implementations continues to
 >be a major pain point of the Lightning technology. Different channel policies,
 >default settings, and routing strategies create friction when attempting to
 >make payments. This is why it is so important to have independent developers
->building testing tools and researching the health of the protocol as a whole."
+>building testing tools and researching the health of the protocol as a whole.
 
 Looking ahead, BLAST is preparing for the next development phase, focusing on
 creating lightweight models for different LN implementations, followed by
@@ -266,10 +266,10 @@ through `lnprototest`, Lampo helps reduce the risks of protocol inconsistencies
 and implementation errors—challenges that can significantly impact Lightning's
 reliability.
 
->"Building reliable Lightning infrastructure requires both rigorous testing and
+>Building reliable Lightning infrastructure requires both rigorous testing and
 >continuous improvements. The LDK-Lnprototest integration and enhancements to
 >Lampo aim to make the network more robust and developer-friendly. Excited to
->push this forward!" —Prakhar Saxena, Lampo Project Lead
+>push this forward! —Prakhar Saxena, Lampo Project Lead
 
 In addition to improving the Lightning testing environment, Lampo has also
 [introduced
