--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -273,7 +273,8 @@ predictable development process for LDK-based implementations like Lampo.
 >Building reliable Lightning infrastructure requires both rigorous testing and
 >continuous improvements. The LDK-Lnprototest integration and enhancements to
 >Lampo aim to make the network more robust and developer-friendly. Excited to
->push this forward! —Prakhar Saxena, Lampo Project Lead
+>push this forward! 
+>—Prakhar Saxena, Lampo Project Lead
 
 In addition to improving the Lightning testing environment, Lampo has also
 [introduced
