Grantee suggested edit/update

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -179,9 +179,10 @@ service providers. As Christian Decker, Core Engineer at Blockstream put it:
 >It is the fundamental building block, and central to the non-custodial nature
 >of Greenlight.
 
-Looking ahead, VLS is preparing for its next phase of development, with a focus
-on continued enterprise optimization and expanded network compatibility. Work is
-already underway to bring support for LND through the
+Looking ahead, VLS aims for full mainnet readiness within a year, with plans 
+to add support for new Lightning features like splicing and dual funding. 
+The team is focusing on enabling enterprises to confidently manage millions 
+in channel funds. Work is already underway to bring support for LND through the
 [lndsigner](https://github.com/NYDIG/lndsigner) project, a step toward making
 VLS accessible to a broader range of Lightning implementations. Additionally,
 planned developments include security features such as Verifiable Secret Sharing
