Grantee suggested edit

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -145,14 +145,7 @@ Since receiving OpenSats
 [funding](/blog/bitcoin-grants-december-2023#validating-lightning-signer), VLS
 has [made important
 advancements](https://gitlab.com/lightning-signer/validating-lightning-signer/-/commits/main?ref_type=HEADS)
-for both individual users and enterprise deployments. A major milestone came
-with the implementation of low-resource signer support, allowing VLS to run
-efficiently on remote microcontrollers like
-[ESP32](https://en.wikipedia.org/wiki/ESP32) and
-[STM32](https://en.wikipedia.org/wiki/STM32). This development opens the door
-for lightweight and cost-effective security solutions that can be deployed in
-diverse environments, from personal wallets to embedded payment devices. In
-parallel, the
+for both individual users and enterprise deployments. The
 [release](https://gitlab.com/lightning-signer/validating-lightning-signer/-/releases)
 of Beta 3 introduced multi-signer functionality, ensuring that Lightning node
 operators could enforce additional security policies by requiring multiple
