Edit to remove typo
Co-authored-by: Bayer <55212954+Bayernatoor@users.noreply.github.com>

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -13,7 +13,7 @@ building beyond the base layer. The Lightning Network is leading that
 charge—and thanks to dedicated open-source contributors, it's becoming faster,
 more secure, and easier to use every day. While the base layer ensures
 decentralization and security, higher layers with different trade-off
-characteristics are required to enable high-velocity- and micro-transactions,
+characteristics are required to enable high-velocity micro-transactions,
 streaming payments, and everyday commerce. That’s where Lightning comes in.
 
 As bitcoin++ organizer and Lightning Developer Lisa Neigut explains:
