Edit capitalization to lowercase J >> j
Co-authored-by: Bayer <55212954+Bayernatoor@users.noreply.github.com>

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -77,7 +77,7 @@ The impact of these enhancements goes beyond just payment channels. By making
 on-chain transaction logic more efficient, Splicing and Splice Script pave the
 way for improved privacy in Bitcoin transactions, including
 [Coinjoins](https://bitcoinops.org/en/topics/coinjoin/) and
-[PayJoins](/blog/developing-advancements-in-onchain-privacy#async-payjoin). As
+[Payjoins](/blog/developing-advancements-in-onchain-privacy#async-payjoin). As
 Dusty explains:
 
 >The dream of higher-privacy decentralized on-chain coin sharing is brought
