Edit to replace link with mediawiki link for BIP39
Co-authored-by: Bayer <55212954+Bayernatoor@users.noreply.github.com>

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -270,7 +270,7 @@ In addition to improving the Lightning testing environment, Lampo has also
 [introduced
 improvements](https://github.com/vincenzopalazzo/lampo.rs/pull/295/commits) to
 wallet security and usability. Previously, users had to manually enter their
-[BIP39](https://github.com/bitcoin/bips/tree/master/bip-0039) seed words in the
+[BIP39](https://github.com/bitcoin/bips/blob/master/bip-0039.mediawiki) seed words in the
 command line every time they restored a wallet, posing privacy risks and
 reducing usability. Now, Lampo securely stores and manages wallet restoration
 data in a binary file (`wallet.dat`), eliminating the need for repeated manual
