--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -144,7 +144,7 @@ Network operations and management.
 Since receiving OpenSats
 [funding](/blog/bitcoin-grants-december-2023#validating-lightning-signer), VLS
 has [made important
-advancements](https://gitlab.com/lightning-signer/validating-lightning-signer/-/commits/main?ref_type=HEADS)
+advancements](https://gitlab.com/lightning-signer/validating-lightning-signer/-/releases)
 for both individual users and enterprise deployments. The
 [release](https://gitlab.com/lightning-signer/validating-lightning-signer/-/releases)
 of Beta 3 introduced tag-team signing functionality, allowing multiple signers 
@@ -173,11 +173,10 @@ As Christian Decker, Core Engineer at Blockstream put it:
 Looking ahead, VLS aims for full mainnet readiness within a year, with plans 
 to add support for new Lightning features like splicing and dual funding. 
 The team is also focusing on enabling enterprises to confidently manage millions 
-in channel funds. Additionally, planned developments include security features 
-such as Versioned Storage Service (VSS), Bolt 12 enhancements, and L402 protocol 
-integration. In the future, the project aims to introduce multi-sig capabilities 
-for Lightning transactions, further strengthening security for high-value and 
-institutional use cases.
+in channel funds. Additionally, planned developments include improved support 
+for routing and security features such as VLS running on secure enclaves. 
+In the future, the project aims to introduce multi-sig capabilities for Lightning 
+transactions, further strengthening security for high-value and institutional use cases.
 
 Through these advancements, VLS pushes the boundaries of what's possible in
 Lightning Network security, ensuring that Bitcoin's most widely used and
