Grantee suggested edit
Co-authored-by: Vincenzo Palazzo <vincenzopalazzodev@gmail.com>

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -281,9 +281,7 @@ more secure node implementation.
 Looking ahead, Lampo plans to continue its evolution by implementing a
 proof-of-concept for Validating Lightning Signer (VLS), a move that will further
 improve security by enabling external validation of Lightning signatures. Future
-updates will also introduce
-[BOLT12](https://github.com/lightning/bolts/blob/master/12-offer-encoding.md#bolt-12-negotiation-protocol-for-lightning-payments)
-support, refine the plugin system, and expand documentation to encourage broader
+updates will also introduce a PoC of a plugin system, and expand documentation to encourage broader
 adoption. By fostering a truly open-source, modular approach to running a
 Lightning node, Lampo is carving out a space for greater experimentation and
 innovation in the Lightning ecosystem.
